--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string name="new_game">new game</string>
+    <string name="resume_game">resume game</string>
+
     <string name="small_castle">small castle</string>
     <string name="small_coin">small coin</string>
     <string name="small_leaf">small leaf</string>
